test/conformance/chainsaw/policy-validation/cluster-policy/invalid-global-context-entry-reference/clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-apicall-correct
spec:
  validationFailureAction: Enforce
  failurePolicy: Fail
  rules:
  - name: main-deployment-exists
    context:
    - name: deploymentCount
      globalReference:
        jmesPath: "items | length(@)"
    match:
      all:
      - resources:
          kinds:
          - Pod
    preconditions:
      all:
      - key: '{{ request.operation }}'
        operator: AnyIn
        value:
        - CREATE
        - UPDATE
    validate:
      deny:
        conditions:
          any:
          - key: "{{ deploymentCount }}"
            operator: Equal
            value: 0
