test/conformance/chainsaw/policy-validation/cluster-policy/invalid-global-context-entry-reference/gctxentry.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: gctxentry-apicall-correct
spec:
  apiCall:
    urlPath: "/apis/apps/v1/namespaces/default/deployments"
    refreshInterval: 1h
