test/conformance/chainsaw/policy-validation/cluster-policy/invalid-global-context-entry-reference/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-deployment
  namespace: default
  labels:
    app: main-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-deployment
  template:
    metadata:
      labels:
        app: main-deployment
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
